2005-12-13  Alexis Sukrieh  <sukria@backup-manager.org>

	* AUTHORS:
	  + Cleaner
	  + Added translators
	* THANKS:
	  + Some typos, changes.
	* VERSION:
	  + 0.6 !!! Yeah :)
	* backup-manager:
	  + version= 0.6 (yeah)

2005-12-13  Alexis Sukrieh  <sukria@backup-manager.org>

	* Makefile:
	  + add a target `docs' for building the userguide.
	* doc/Makefile:
	  + install the user guide in /usr/share/backup-manager/doc
	* po/it.po:
	  + First full version of the translated messages in Italian (Matteo Frare
	  Barutti <xenon@ngi.it>).

2005-12-13  Alexis Sukrieh  <sukria@backup-manager.org>

	* po/es.po:
	  + New translation from Niv Altivanik (not finished).
	* t/t05-hooks.sh:
	  + clean a bit the test script, remove the verbose stuff.

2005-12-13  Alexis Sukrieh  <sukria@backup-manager.org>

	* No more yes/no -> true/false
	* French translatio ok.

2005-12-12  Alexis Sukrieh  <sukria@backup-manager.org>

	* Makefile:
	  + install po files
	* backup-manager:
	  + minor bug fix (call to bad function)
	* Removed most of "info -n" calls
	  + lib/actions.sh:
	  + lib/backup-methods.sh:
	  + lib/files.sh:
	  + lib/logger.sh:
	* po/Makefile:
	  + Much cleaner
	* po/fr.po
	  + New french version, complete.

2005-12-09  Alexis Sukrieh  <sukria@backup-manager.org>

	* backup-manager:
	  + cleaned a bit the code.
	* backup-manager.conf.tpl:
	  + removed useless BM_BURNING conf key (BM_BURNING_METHOD is enough).
	* Updated the tests, new test for the hooks.

2005-12-06  Alexis Sukrieh  <sukria@backup-manager.org>

	* backup-manager-upload:
	  + chomp() the result of the shell command, better.
	* Renamed tests with understandable names.
	* t/t04-tarball-blacklist.sh:
	  + New test for reproducing bug #4, cannot reproduce...
	* t/testlib.sh:
	  + better paths for the lock and pid files.

2005-12-06  Alexis Sukrieh <sukria@backup-manager.org>

	* doc/user-guide.sgml:
	 + Chapter 3 is finished (well, remains a lot of typos but the main
	 structure is there).
